--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -47,10 +47,16 @@ task.status.FINISHED_ERROR.description=The task failed to finish. It may partial
 
 ###
 
-task.create.errors.sourceFolder=Source folder does not exist.
-task.create.errors.destinationFolder=Destination folder is not valid path variable.
-task.create.errors.syntaxAndPattern=SyntaxAndPattern must be in syntax:pattern format.
-task.create.errors.fileOperation=File operation is not recognized.
+task.create.errors.sourceFolder=Source folder is not valid path variable: ${validatedValue}
+task.create.errors.sourceFolder.missing=Source folder parameter is missing.
+task.create.errors.sourceFolder.notExists=Source folder does not exist: {0}
+task.create.errors.destinationFolder=Destination folder is not valid path variable. ${validatedValue}
+task.create.errors.destinationFolder.missing=Destination folder parameter is missing.
+task.create.errors.syntaxAndPattern=SyntaxAndPattern must be in syntax:pattern format. Where syntax must be either glob or pattern.
+task.create.errors.syntaxAndPattern.missing=SyntaxAndPattern parameter is missing.
+task.create.errors.fileOperation=File operation is not recognized. Must be one of: {0}
+task.create.errors.fileOperation.missing=File operation is missing.
 
+###
 
-
+errors.HttpMessageNotReadable=Http message is malformed. Please check request's format.
