--- a/src/main/resources/i18n/messages_cs_CZ.properties
+++ b/src/main/resources/i18n/messages_cs_CZ.properties
@@ -3,3 +3,16 @@ operations.file.COPY.description=Zkopčí to.
 
 operations.file.MOVE.name=Přesun
 operations.file.MOVE.description=Přehodí to.
+
+###
+
+task.create.errors.sourceFolder.missing=Chybí source_folder parameter.
+task.create.errors.sourceFolder=source_folder není ve správném formátu. ${validatedValue}
+task.create.errors.sourceFolder.notExists=Složka zdrojová nebyla nalezena: {0}
+task.create.errors.destinationFolder=destination_folder není ve správném formátu. ${validatedValue}
+task.create.errors.syntaxAndPattern=syntax_and_pattern musí být ve formátu syntax:pattern. Kde syntax může být buď glob, anebo pattern.
+task.create.errors.fileOperation=file_operation nerozpoznaný identifikátor. Podporovány jsou pouze: {0}.
+
+###
+
+errors.HttpMessageNotReadable=Http zpráva je v nepodporovaném formátu. Zkontrolujte formát požadavku.
