i18n internalization added some lines

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -33,8 +33,8 @@ task.status.SCHEDULED.description=The task is waiting in a queue to be executed.
 task.status.RUNNING.name=Running
 task.status.RUNNING.description=The task is running.
 
-task.status.FINISHED_CANCELLED.name=Cancelled
-task.status.FINISHED_CANCELLED.description=The task was cancelled by user.
+task.status.FINISHED_STOPPED.name=Cancelled
+task.status.FINISHED_STOPPED.description=The task was cancelled by user.
 
 task.status.FINISHED_OK.name=Finished OK
 task.status.FINISHED_OK.description=The task finished successfully.
@@ -56,6 +56,8 @@ task.create.errors.syntaxAndPattern=SyntaxAndPattern must be in syntax:pattern f
 task.create.errors.syntaxAndPattern.missing=SyntaxAndPattern parameter is missing.
 task.create.errors.fileOperation=File operation is not recognized. Must be one of: {0}
 task.create.errors.fileOperation.missing=File operation is missing.
+task.create.errors.stringOperation=String operation is not recognized. Must be one of: {0}
+task.create.errors.stringOperation.missing=String operation is missing.
 
 ###
 
