--- a/src/main/resources/i18n/messages_cs_CZ.properties
+++ b/src/main/resources/i18n/messages_cs_CZ.properties
@@ -15,4 +15,29 @@ task.create.errors.fileOperation=file_operation nerozpoznaný identifikátor. Po
 
 ###
 
+###
+
+task.status.CREATED.name=Vytvořeno
+task.status.CREATED.description=The task has just been created, it is yet to be scheduled and executed.
+
+task.status.SCHEDULED.name=Naplánováno
+task.status.SCHEDULED.description=The task is waiting in a queue to be executed.
+
+task.status.RUNNING.name=Běží
+task.status.RUNNING.description=The task is running.
+
+task.status.FINISHED_STOPPED.name=Zastaveno
+task.status.FINISHED_STOPPED.description=The task was cancelled by user.
+
+task.status.FINISHED_OK.name=Skončilo-OK
+task.status.FINISHED_OK.description=The task finished successfully.
+
+task.status.FINISHED_PARTIALLY_ERROR.name=Skončilo-Částečně
+task.status.FINISHED_PARTIALLY_ERROR.description=The task finished partially successfully. Some errors were encountered.
+
+task.status.FINISHED_ERROR.name=Skončilo-Chyba
+task.status.FINISHED_ERROR.description=The task failed to finish. It may partially finish or even not start at all...
+
+###
+
 errors.HttpMessageNotReadable=Http zpráva je v nepodporovaném formátu. Zkontrolujte formát požadavku.
